fix bug. User icon overlaps line in Account page #2041 (#2043)

--- a/lms/static/sass/shared/_header.scss
+++ b/lms/static/sass/shared/_header.scss
@@ -339,6 +339,14 @@ header.global {
   }
 }
 
+// accountSetting and profile page dropdown design
+body.view-account-settings,
+body.view-profile {
+  header.global .user .dropdown {
+    line-height: 1.6rem;
+  }
+}
+
 
 // edX theme: Global Header
 // ====================
